fix mobile scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,17 +5,21 @@ body {
     font-family: 'Manrope', sans-serif;
     background-color: #212529;
 }
-html {
-    overflow: scroll;
-    overflow-x: hidden;
+/*prevent overflow on right side*/
+body{
+    overflow-x:hidden;
 }
- ::-webkit-scrollbar {
-    width: 0;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
-}
-.container::-webkit-scrollbar {
-    display: none;  /* Safari and Chrome */
-}
+/*html {*/
+/*    overflow: scroll;*/
+/*    overflow-x: hidden;*/
+/*}*/
+/* ::-webkit-scrollbar {*/
+/*    width: 0;  !* Remove scrollbar space *!*/
+/*    background: transparent;  !* Optional: just make scrollbar invisible *!*/
+/*}*/
+/*.container::-webkit-scrollbar {*/
+/*    display: none;  !* Safari and Chrome *!*/
+/*}*/
  
 a {
   color: inherit;
